tests/syntax-error/chained-equality.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g chained-equality.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: chained-equality.silly:8:17: error: parse error: mismatched input 'EQ' expecting ';'
// CHECK:     8 | BOOL b = 1 EQ 1 EQ 0;  // should fail
// CHECK:       |                 ^


BOOL b = 1 EQ 1 EQ 0;  // should fail

